[package]
name = "cifparse-rs"
version = "0.1.0"
edition = "2021"
description = "CIF/mmCIF parser in Rust for WASM - shared by mmcif-rainbow extensions"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
regex = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
